alterando o site do Pedro Del Rey

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     </details>
     
     <ul>
-        <li><a href="#ds" accesskey="d">Desenvolvimento de sistemas</a> alt+d </li>
+        <li><a href="#ds" accesskey="d">Desenvolvimento de sistemas</a></li>
         <li><a href="#edf">Edificações</a></li>
         <li><a href="#enf">Enfermagem</a></li>
-        <li><a href="#geo" accesskey="g">Geodésia</a> alt+g </li>
+        <li><a href="#geo" accesskey="g">Geodésia</a></li>
         <li><a href="">Mecânica</a></li>
         <li><a href="">Qualidade</a></li>
     </ul>
 
-    <h2 id="ds">Desenvolvimento de sistemas</h2>
+    <h2 id="ds">Desenvolvimento de sistemas (melhor curso)</h2>
     <h3>Objetivo</h3>
     <!-- <p dir="rtl"> -->
     <p>
