alteração no titulo do site

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <details>
-        <summary><strong>UNICAMP</strong></summary>
-        <h1 id="inicio" contenteditable="true"> Cursos do COTIL</h1>
-    </details>
+    <h1 id="inicio" contenteditable="true"> Cursos do COTIL - UNICAMP</h1>
     
     <ul>
         <li><a href="#ds" accesskey="d">Desenvolvimento de sistemas</a></li>
